grammar.js
    model: $ => seq(
      repeat($._model_statement),
      optional(seq(
        $.data,
        repeat($._data_statement),
      )),
    ),

    _model_statement: $ => choice(
      $.set,
      $.param,
      $.var,
      $.constraint,
      $.objective,
      $.solve,
      $.check,
      $.display,
      $.printf,
      $.for,
      $.table,
      $.end,
    ),

    _data_statement: $ => choice(
      $.set_data,
      $.param_data,
      $.end,
    ),

    data: $ => seq('data', ';'),

    constraint: $ => seq(
      optional(choice(seq(choice('subj', 'subject'), 'to'), 's.t.')),
      alias($.symbolic_name, $.model_object),
      optional(alias($.string, $.alias)),
      optional($.indexing_expression),
      ':',
      $.linear_expression,
      optional(','),
      alias(choice('=', '<=', '>='), $.operator),
      $.linear_expression,
      optional(seq(
        optional(','),
        alias(choice('<=', '>='), $.operator),
        $.linear_expression,
      )),
      ';',
    ),

    check: $ => seq(
      'check',
      optional($.indexing_expression),
      optional(':'),
      alias($.log_expr, $.expr),
      ';',
    ),

    set_data: $ => seq(
      'set',
      seq(alias($.symbolic_name, $.model_object), optional($.subscript)),
      repeat1(seq(optional(','), alias($.set_data_record, $.record))),
      ';',
    ),

    param_data: $ => seq(
      'param',
      choice(
        seq(
          alias($.symbolic_name, $.model_object),
          optional(seq('default', $.value)),
          repeat1(seq(optional(','), alias($.param_data_record, $.record))),
        ),
        seq(
          optional(seq('default', $.value)),
          $._tabbing_data,
        ),
      ),
      ';',
    ),

    tabular_data: $ => prec.right(seq(
      choice(':', seq('(tr)', optional(':'))),
      repeat1($.value),
      ':=',
      repeat1(choice($.value, '.')),
    )),

    _tabbing_data: $ => seq(
      ':',
      optional(seq($.symbolic_name, ':')),
      $.symbolic_name,
      repeat(seq(optional(','), $.value)),
      ':=',
      $._list_data_record,
    ),

    slice: $ => sep1(choice($.value, '*'), ','),

    value: $ => choice($.number, $.string, $.bareword),

    //
    // Expressions
    //

    indexing_expression: $ => seq(
      '{',
      sep1($.indexing_entry, ','),
      optional(seq(':', alias($.log_expr, $.expr))),
      '}',
    ),

    indexing_entry: $ => choice(
      alias($.set_expr, $.expr),
      seq(
        $.symbolic_name,
        alias('in', $.operator),
        alias($.set_expr, $.expr),
      ),
      seq(
        '(',
        alias(choice($.num_expr, $.sym_expr), $.expr),
        repeat(seq(',', alias(choice($.num_expr, $.sym_expr), $.expr))),
        ')',
        alias('in', $.operator),
        alias($.set_expr, $.expr),
      ),
    ),

    linear_expression: $ => prec.left(choice(
      $._primary_linear_expr,

      // Arithmetic operators
      prec.left(PREC.UNARY, seq(
        alias(choice('+', '-'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.left(PREC.ADD, seq(
        alias($.linear_expression, $.expr),
        alias(choice('+', '-', 'less'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.left(PREC.MUL, seq(
        alias($.linear_expression, $.expr),
        alias(choice('*', '/', 'div', 'mod'), $.operator),
        alias($.linear_expression, $.expr),
      )),
      prec.right(PREC.EXP, seq(
        alias($.linear_expression, $.expr),
        alias(choice('**', '^'), $.operator),
        alias($.linear_expression, $.expr),
      )),
    )),

    _primary_linear_expr: $ => prec(1, choice(
      alias($.num_expr, $.expr),
      seq($.symbolic_name, optional($.subscript)),
      // Iterated linear expression
      //seq('sum', $.indexing_expression, $.linear_expression),
      alias($.conditional_linear_expr, $.conditional_expression),
      seq('(', $.linear_expression, ')'),
    )),

    subscript: $ => seq(
      '[',
      sep1(alias(choice($.num_expr, $.sym_expr), $.expr), ','),
      ']',
    ),

    function_call: $ => seq(
      $.function_name,
      '(',
      optional(sep1(
        alias(choice($.num_expr, $.sym_expr, $.set_expr), $.expr),
        ',')),
      ')',
    ),

    function_name: _ => choice(
      'Irand224',
      'Normal',
      'Normal01',
      'Uniform',
      'Uniform01',
      'abs',
      'atan',
      'card',
      'ceil',
      'cos',
      'exp',
      'floor',
      'gmtime',
      'length',
      'log',
      'log10',
      'max',
      'min',
      'round',
      'sin',
      'sqrt',
      'str2time',
      'substr',
      'tan',
      'time2str',
      'trunc',
    ),

    symbolic_name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    bareword: $ => /[a-zA-Z0-9_.+-]+/,
